aboutus - encourage cooperation.

--- a/aboutus.html
+++ b/aboutus.html
@@ -62,7 +62,7 @@
                     The Temecula Valley Computer User Group (TVCUG) was established in 1991 to educate people on the use of PCs and we continue today to help users as new technologies develop.
                 </p>
                 <p>
-                    We are a cooperative community which means that we welcome people of all experience levels from novice to expert.  
+                    We are a cooperative community which means that we welcome people of all experience levels from novice to expert and we encourage members to share their knowledge with all.
                 </p>
                 <p>
                     If you would like to become a member, please contact our <a href="mailto:tvcug.membership@gmail.com?subject=Membership questions">Membership Chair</a>.
