--- a/aboutus.html
+++ b/aboutus.html
@@ -32,15 +32,14 @@
                 <li><a href="index.html" >Home</a></li>
                 <li><a href="directions.html">Directions</a></li>
                 <li><a href="contactus.html">Contact Us</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
+                <li class="active"><a href="aboutus.html">About Us</a></li>
             </ul>
         </div><!-- close row -->
             
     <div class="col-md-2" id="left_column">
         <figure id="us_flag">
             <img id="pole" src="img/flagpole.gif" alt="flagpole"/>
-            <!--<img id="pole-sm" src="img/flagpole.gif" alt="flagpole" height="100"/>-->
-            <img id="flag" src="img/Usflag_ani.gif" alt="us_flag" width="170" height="100"/>
+            <img id="flag" src="img/Usflag_ani.gif" alt="us_flag"/>
         </figure>
         
         <div class="clear">
