--- a/contactus.html
+++ b/contactus.html
@@ -31,7 +31,7 @@
             <ul class="nav nav-tabs">
                 <li><a href="index.html" >Home</a></li>
                 <li><a href="directions.html">Directions</a></li>
-                <li><a href="contactus.html">Contact Us</a></li>
+                <li class="active"><a href="contactus.html">Contact Us</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
             </ul>
         </div><!-- close row -->
