Add active class to tabs list items when page is displayed.

--- a/aboutus.html
+++ b/aboutus.html
@@ -32,7 +32,7 @@
                 <li><a href="index.html" >Home</a></li>
                 <li><a href="directions.html">Directions</a></li>
                 <li><a href="contactus.html">Contact Us</a></li>
-                <li><a href="aboutus.html">About Us</a></li>
+                <li class="active"><a href="aboutus.html">About Us</a></li>
             </ul>
         </div><!-- close row -->
             
@@ -91,7 +91,7 @@
                 <li>
                     <a href="contactus.html">Contact Us</a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="aboutus.html">About Us</a>
                 </li>
             </ul>
