--- a/directions.html
+++ b/directions.html
@@ -92,7 +92,7 @@
                 <li>
                     <a href="index.html">Home</a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="directions.html">Directions</a>
                 </li>
                 <li>
