--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </section>
         <div class="row">
             <ul class="bottom-nav">
-                <li>
+                <li class="active">
                     <a href="index.html">Home</a>
                 </li>
                 <li>
