--- a/aboutus.html
+++ b/aboutus.html
@@ -39,8 +39,7 @@
     <div class="col-md-2" id="left_column">
         <figure id="us_flag">
             <img id="pole" src="img/flagpole.gif" alt="flagpole"/>
-            <!--<img id="pole-sm" src="img/flagpole.gif" alt="flagpole" height="100"/>-->
-            <img id="flag" src="img/Usflag_ani.gif" alt="us_flag" width="170" height="100"/>
+            <img id="flag" src="img/Usflag_ani.gif" alt="us_flag"/>
         </figure>
         
         <div class="clear">
@@ -62,7 +61,7 @@
                     The Temecula Valley Computer User Group (TVCUG) was established in 1991 to educate people on the use of PCs and we continue today to help users as new technologies develop.
                 </p>
                 <p>
-                    We are a cooperative community which means that we welcome people of all experience levels from novice to expert.  
+                    We are a cooperative community which means that we welcome people of all experience levels from novice to expert and we encourage members to share their knowledge with all.
                 </p>
                 <p>
                     If you would like to become a member, please contact our <a href="mailto:tvcug.membership@gmail.com?subject=Membership questions">Membership Chair</a>.
